campaign events up to date

--- a/child_pages/cc-elections/Candidates/ciattarelli.html
+++ b/child_pages/cc-elections/Candidates/ciattarelli.html
@@ -176,7 +176,27 @@
 
         <iframe src="https://www.youtube.com/embed/GIG98259g1Q?si=B1S-XLLFcLh8MDA1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
     </div> 
-            
+         
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Jack Ciatarelli Town Hall, Parkertown Volunteer Fire Company</strong></li>
+            <li class="description">Meet Republican Primary Gubernatorial Candidate Jack Ciatarelli</li>
+            <li class="date-and-time">04/17/25 - 6:00pm</li>
+            <li class="location">Little Egg Harbor Township, NJ 08087</li>
+            <li class="RSVP">RSVP: text TUCKERTON to 60939</li>
+        </ul>
+    </div>  
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Jack Ciatarelli Town Hall, Somerset/Fox Hollow Golf Club</strong></li>
+            <li class="description">Meet Republican Primary Gubernatorial Candidate Jack Ciatarelli</li>
+            <li class="date-and-time">04/25/25 - 6:00pm</li>
+            <li class="location">59 Fox Chase Run, Branchburg, NJ 08876</li>
+            <li class="RSVP"><a href="https://www.facebook.com/events/684921947332438"> Facebook Event</a></li>
+        </ul>
+    </div>  
+
     <div class="event-card">
         <ul class="event-info">
             <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
@@ -189,6 +209,16 @@
 
     <div class="event-card">
         <ul class="event-info">
+            <li class="name"><strong>Jack Ciatarelli Town Hall, Wayne Township Community Center</strong></li>
+            <li class="description">Meet Jack Ciatarelli and ask questions</li>
+            <li class="date-and-time">04/30/25 - 6:00pm</li>
+            <li class="location">Wayne Township Community Center, 1 Pike Drive, Wayne, NJ 07470</li>
+            <li class="RSVP"><a href="https://www.facebook.com/events/1825097161619598"> Facebook Event</a></li>
+        </ul>
+    </div>    
+
+    <div class="event-card">
+        <ul class="event-info">
             <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
             <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
             <li class="date-and-time">05/10/25 - 8:30am</li>
@@ -196,6 +226,16 @@
             <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
         </ul>
     </div>  
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Jack Ciatarelli Town Hall, Cherry Hill American Legion</strong></li>
+            <li class="description">Meet Jack Ciatarelli and ask questions</li>
+            <li class="date-and-time">05/22/25 - 6:00pm</li>
+            <li class="location">American Legion Post 372, 1532 Martin Ave, Cherry Hill Township, NJ 08002</li>
+            <li class="RSVP"><a href="https://www.facebook.com/events/2718735904989926"> Facebook Event</a></li>
+        </ul>
+    </div>   
 
     <div class="event-card">
         <ul class="event-info">
