--- a/child_pages/cc-elections/Candidates/fulop.html
+++ b/child_pages/cc-elections/Candidates/fulop.html
@@ -173,7 +173,35 @@
          </div>
      </div>
 
-        
+     <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Steve Fulop Meet n Greet, Tindall Road Brewing Co, Bordentown</strong></li>
+            <li class="description">Meet Democrat Primary Gubernatorial Candidate Steve Fulop</li>
+            <li class="date-and-time">04/14/25 - 6:30pm</li>
+            <li class="location">Corinne's Place, 1254 Haddon Ave, Camden NJ, 08103</li>
+            <li class="RSVP">RSVP: <a href="https://www.mobilize.us/fulopforgovernor/event/761598/"> Campaign Site</a></li>
+        </ul>
+    </div>  
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Steve Fulop Meet n Greet, Hamilton Township Public Library</strong></li>
+            <li class="description">Meet Democrat Primary Gubernatorial Candidate Steve Fulop</li>
+            <li class="date-and-time">04/15/25 - 6:30pm</li>
+            <li class="location">Hamilton Township Public Library, 1 Justice Samuel Alito Jr, Way</li>
+            <li class="RSVP">RSVP: <a href="https://www.mobilize.us/fulopforgovernor/event/761579/"> Campaign Site</a></li>
+        </ul>
+    </div>  
+
+     <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Steve Fulop Meet n Greet, Corinne's Place, Camden</strong></li>
+            <li class="description">Meet Democrat Primary Gubernatorial Candidate Steve Fulop/li>
+            <li class="date-and-time">04/19/25 - 5:00pm</li>
+            <li class="location">Corinne's Place, 1254 Haddon Ave, Camden NJ, 08103</li>
+            <li class="RSVP">RSVP: <a href="https://www.mobilize.us/fulopforgovernor/event/774312/"> Campaign Site</a></li>
+        </ul>
+    </div>  
             
      <div class="candidate-agenda">
 
