--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -208,7 +208,13 @@
                 <ul>
                     Opposes the phase out of tip crediting in the service industry
                     <br>
-                    
+                    <div class="video-box-modal can-sec">
+                        <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
+                
+                        <iframe src="https://www.youtube.com/embed/_cZXrb0ixrA?si=-qgzkd2bi2bzwnsX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <a href="https://www.njleg.state.nj.us/bill-search/2024/A5433" target="_blank" rel="noopener noreferrer" class="website-link"> Referenced Legislation: A5433</a>
+                <br>
                     Supports parents rights to make decisions about their children's health and wellness.<a href="https://twitter.com/TestaForNJ/status/1709190819075309773" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a>
                 <br>
                 Supports the troops. Gleaned from <a href="https://www.facebook.com/NJRFTF/posts/pfbid08yQkHTkFzkSd7p6agCWAnGZxGmbsPmoh4Tx7VsKTULodwcrX9NDhmXLqHRVow366l" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a> reposts.
