--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -209,6 +209,12 @@
          </div>
      </div>
 
+     <div class="video-box-modal can-sec">
+        <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
+
+        <iframe src="https://www.youtube.com/embed/m2c0H2agSyc?si=OHKMTDASdFpMG7u9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
      <div class="event-card">
         <ul class="event-info">
             <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
