--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -379,6 +379,48 @@
                             
                         </div>
                         <div class="first-name">
+                            <a href="Candidates/gottheimer.html">Josh</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>1A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name  push-down-last-name">
+                            <a href="Candidates/gottheimer.html">Gottheimer</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+            </div><!-- end of state-senator row, aka end of a single ballot choice -->
+
+            <div class="row state-senator">
+                <div class="office-title">
+                    <div class="ot-english">
+                        <p>Governor</p>
+                        <p>Vote for One</p>
+                    </div>
+                    <div class="ot-espanol">
+                        <p>Gobernador</p>
+                        <p>Vota por Uno</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Democrat</p> 
+                            
+                        </div>
+                        <div class="first-name">
                             <a href="Candidates/spiller.html">Sean</a>
                         </div>
                         <div class="number-a-and-circle"> 
