pignatelli info redo test

--- a/child_pages/cc-elections/Candidates/ciattarelli.html
+++ b/child_pages/cc-elections/Candidates/ciattarelli.html
@@ -280,7 +280,7 @@
                 
             </div>
 
-            <h4 class="sub-heading">Experience</h4>
+            <h4 class="sub-heading">Relevant Bio and Experience</h4>
                 <div class="experience can-sec">
                     
                 </div>
