one more pignatelli reformat

--- a/child_pages/cc-elections/Candidates/pignatelli.html
+++ b/child_pages/cc-elections/Candidates/pignatelli.html
@@ -416,12 +416,8 @@
             <br>
             <br>
 
-            <h4 class="sub-heading">Downe's Issues</h4>
+            <h4 class="sub-heading">Key Issues Facing Downe Township</h4>
             <div class="issues can-sec">
-                <h2>C. Key Issues Facing Downe Township</h2>
-          
-                <br>
-                <br>
 
                 <div class="issue-item">
                 <h3>1. Lack of Transparency and Closed-Door Decisions</h3>
@@ -493,7 +489,7 @@
                 <p><strong>What’s happening:</strong> Fire, EMS, and emergency volunteers work hard with limited support or recognition.</p>
 
                 <br>
-                
+
                 <p><strong>Sean’s Solution:</strong></p>
                 <ul>
                     <li>Increase funding opportunities</li>
