spadea events added

--- a/child_pages/cc-elections/Candidates/spadea.html
+++ b/child_pages/cc-elections/Candidates/spadea.html
@@ -170,35 +170,69 @@
          </div>
      </div>
 
-     <div class="event-card">
-        <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">04/26/25 - 8:30am</li>
-            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-        </ul>
-    </div>    
+     <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
 
-    <div class="event-card">
-        <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">05/10/25 - 8:30am</li>
-            <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-        </ul>
-    </div>  
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+                <li class="date-and-time">04/26/25 - 8:30am</li>
+                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+            </ul>
+        </div>    
 
-    <div class="event-card">
-        <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">05/24/25 - 8:30am</li>
-            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-        </ul>
-    </div>     
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Bill Spadea Meet n Greet, Dino's Deli, West Milford, NJ</strong></li>
+                <li class="description">Meet Republican Primary Gubernatorial Candidate Bill Spadea</li>
+                <li class="date-and-time">04/26/25 - 11:30am</li>
+                <li class="location">Dino's Deli, 179 Cahill Cross Rd, West Milford, NJ 07480</li>
+                <li class="RSVP"><a href="https://www.facebook.com/photo/?fbid=656817260435106&set=pcb.656819080434924"> Facebook Ad</a></li>
+            </ul>
+        </div>  
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Bill Spadea Meet n Greet, Five Dime's Brewery, Westwood</strong></li>
+                <li class="description">Meet Republican Primary Gubernatorial Candidate Bill Spadea</li>
+                <li class="date-and-time">04/27/25 - 1:00pm</li>
+                <li class="location">Five Dime's Brewery, 247 Westwood Ave, Westwood, NJ 07675</li>
+                <li class="RSVP"><a href="https://www.facebook.com/photo/?fbid=656817273768438&set=pcb.656819080434924"> Facebook Ad</a></li>
+            </ul>
+        </div>  
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Bill Spadea Meet n Greet, Iron Bar, Morristown</strong></li>
+                <li class="description">Meet Republican Primary Gubernatorial Candidate Bill Spadea</li>
+                <li class="date-and-time">05/01/25 - 1:00pm</li>
+                <li class="location">Iron Bar, 5 South St, Morristown, NJ 07960</li>
+                <li class="RSVP"><a href="https://www.facebook.com/photo/?fbid=656817320435100&set=pcb.656819080434924"> Facebook Ad</a></li>
+            </ul>
+        </div>  
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+                <li class="date-and-time">05/10/25 - 8:30am</li>
+                <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
+                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+            </ul>
+        </div>  
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+                <li class="date-and-time">05/24/25 - 8:30am</li>
+                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+            </ul>
+        </div>     
+    </details>
             
      <div class="candidate-agenda">
 
