index page update

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 
     <div class="cta-banner">
         <div class="cta-banner-heading">
-            We are currently in the process of updating for the 2025 primary election.
+            Primary Season is well under way. Check the elections section for information.
         </div>
         <div class="cta-content">
             <div class="cta-text">
-                 Check back in a week or so for primary info.
+                 Here is an interview with Democratic Primary candidates for General Assembly, Brandon Saffold and Carolyn Rush.
             </div>
             <div class="cta-link-box">
                  <!-- <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
@@ -144,43 +144,11 @@
 
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close1' class="close">
-          <h4 class="quick-sum">Final report Election Season 2024</h4>
-          <h6 class="page-title">Read to get an idea of the upcoming elections here in Cumberland County.</h6>
+          <h4 class="quick-sum">Saffold And Rush Interview Summary</h4>
+          <h6 class="page-title">Read to get a quick breakdown of the two and a half hour interview.</h6>
 
           <p>
-            US Senate - Curtis Bashaw is not your stereotypical Republican and Andy Kim is very party line. If you are a moderate or independent, Bashaw is definitely worth 
-            your consideration. Mooneyham and Khalil also had well laid out agendas, they probably deserved a spot on the debate stage.
-            <br>
-            <br>
-            US House of Representatives - Whether you like Van Drew or not, he's a powerhouse. With Salerno having a questionable campaign, he might not be currently strong 
-            enough to beat his opponent.
-            <br>
-            <br>
-            Cumberland County Commissioners - If it ain't broke, don't fix it. Cumberland County Democrats fail to make a compelling case for change, at least from where I'm sitting.
-            <br>
-            <br>
-            Cumberland County Clerk - Both candidates seem qualified and Riley is the incumbent, but a few potential mistakes during election season may have left her vulnerable 
-            to her challenger, Commissioner Lods.
-            <br>
-            <br>
-            Millville City Commissioner - All candidates seem like good choices, but Ranello is the incumbent and last minute issues may not be enough to compel a change.
-            <br>
-            <br>
-            Lawrence Township Committee - Incumbent Miletta has 17 years of experience compared to his newcomer challenger Woody, but Woody makes a compelling case for change.
-            <br>
-            <br>
-            Vineland City Council and Mayor races - Team Fanucci is a powerhouse with no visible case for change from challenger Arroyo on the council, and a campaign mostly 
-            based on attacks from former Mayor Romano.
-            <br>
-            <br>
-            Bridgeton, Fairfield, and Lawrence School boards - Extreme lack of information about these races. We need better press coverage.
-            <br>
-            <br>
-            Commercial Township School Board - 3 seats are open with 4 candidates. The three who communicated seem like good choices, with the only candidate Tracy Richardson
-            being unknown from our perspective.
-            <br>
-            <br>
-            Vineland School Board - There are lots of ways to look at this, and we wish all candidates had fully communicated, possibly with a candidates forum to dive in deep.
+            
          </p>
 
         </div>
@@ -193,7 +161,7 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close2' class="close">
             <div class="modal-video-box">
                 <div class="video-box-sm">
-                    <iframe src="https://www.youtube.com/embed/hf3XUG-rShM?si=Dq9HflDiriQSk_M6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/vIXRZufrri4?si=NzTb-eACPCOibxRa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                   
                     <h3 class="video-heading-sm">Git sync test</h3>
                     <div class="video-sm-desc">
                         With just a few days left, watch our final impressions video to get a decent idea of what's happened.
@@ -280,10 +248,10 @@
     <div class="hp-video-box">
 
         <div class="video-box-sm">
-            <!-- <iframe src="https://www.youtube.com/embed/RzMenmzY_-M?si=3CpJROnXAzE-MVPj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+            <iframe src="https://www.youtube.com/embed/vIXRZufrri4?si=NzTb-eACPCOibxRa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>           
             <h3 class="video-heading-sm"></h3>
             <div class="video-sm-desc">
-                Platform Interview with State Assembly Candidate Brandon Saffold Coming Soon!
+                An in depth interview with Democratic Primary candidates for General Assembly, Brandon Saffold and Carolyn Rush.
             </div>
         </div>
 
