county commissioners election quick summary

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -113,9 +113,27 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
 
-          <p> Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
-
+          <p>
+          Two seats are open on the Cumberland County Commissioners Board. The two republican incumbents, Commissioner Albrecht and Commissioner Lods, are running unopposed in the 
+          republican primary. While there is general campaign information on the Cumberland County Regular Republican site and some specifics come up from time to time at the 
+          bi-weekly republican breakfasts, there are a lot more specifics regarding known issues in the county that ought to be talked about directly. We have reached out to both 
+          candidates and Albrecht plans on corresponding, yet we have not received anything after months of waiting. 
+          <br>
+          <br>
+          On the democrat side, three candidates are competing for two seats. John Capizola is a former commissioner who was appointed to his seat mid-term. Yolanda Balicki is a 
+          thoroughly credentialed immigration lawyer. Larae Smith is a known political figure in the community who has run for office multiple times in recent years. One would think 
+          they would have a vested interest in making their cases clear to the public, yet we have received no response from our efforts to make contact.
+          <br>
+          <br>
+          As the Democratic primary approaches, time is quickly slipping away for candidates to make their case to the public. Meanwhile, Republican candidates still have ample time before 
+          the general election to engage with voters. But regardless of the timeline, the kind of basic information we’ve been seeking—positions on issues, general agendas, and 
+          comparisons to their well known opponents—should already be available. After two years of repeated attempts to gather this information and foster cooperation, we’ve learned not to 
+          expect a lot. Simply put: we’re not holding our breath for a sudden outbreak of transparency.
+          <br>
+          <br>
+          Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
+
         </div>
       
       </dialog>
