commercial township quick summary

--- a/child_pages/cc-elections/commercial_township_committee.html
+++ b/child_pages/cc-elections/commercial_township_committee.html
@@ -117,6 +117,13 @@
           <h6 class="page-title">Commercial Township Committee</h6>
           <p>
             
+            One seat is open on the Commercial Township Committee. We have reached out to the candidates via the contact information they provided to the County Clerk 
+            (email and snail mail), though we have not received any responses yet. Apparently Robert Welch has received the endorsement from the Cumberland County 
+            Regular Republican organization, though after regularly attending bi-weekly republican breakfasts for almost 2 years, we have no idea who he is. Similarly, 
+            we have no idea who Warren Vizzard is, but with him not having the County Republican endorsement, we would assume he has a vested interest in making his case.
+            While approximately two months remain until the primary, we're not holding our breath waiting for responses.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
