downe township quick summary

--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -117,6 +117,17 @@
           <h6 class="page-title">Lawrence Township Committee</h6>
           <p>
             
+            The Downe Township committee has two seats open this year. Two candidates, Michael Rothman and Larry Jordan, have received endorsements from the Cumberland County
+            Regular Republican Organization, though after 2 years of regularly attending the bi-weekly republican breakfasts, we have no idea who they are. We have attempted 
+            to make contact with all the candidates via the contact information provided from the County Clerk (email and snail mail), but only the non-endorsed candidate 
+            Sean Pignatelli has responded. To clarify, the other non-endorsed candidate Trevor Spiotto, has also not responded. 
+            <br>
+            <br>
+            Sean Pignatelli is the only candidate in the Downe Township race with a clearly known, accessible platform and a known proven record of hands-on service — from 
+            defending the local school to revitalizing public spaces and pushing for real transparency. While others appear to stay quiet, Sean shows up, speaks up, and 
+            lays out real plans. As far as I’m concerned, he’s the only viable choice — because he’s the only one who’s actually told us what he stands for.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
