lawrence township quick summary

--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -116,14 +116,15 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">Lawrence Township Committee</h6>
           <p>
-            A seat on the Lawrence Township committee is up for election this year, with incumbent committee-man Miletta and challenger Charlie Woody in the race. 
-            Miletta has been doing the job for 17 years and through our conversation with him on the phone, he seems to be very dedicated and hands on, 
-            even so far as to spend personal time and donating resources like steel to help the township repair equipment. On the other hand, Woody is a lifelong 
-            resident of Cedarville who believes it might be time to pass the torch along to the next generation. He wants to bring transparency to the committee 
-            through means of updating the township website, live-streaming and posting committee meetings, and allowing residents to submit questions to the 
-            committee via the website when their schedules don't allow them to attend meetings. He also wants to see progress on the long-standing issue of 
-            repairing County Road 553 and develop engaging spaces for children, such as using the senior center during after school hours for kids activities and 
-            trying to build a skate park in the township.
+            A seat on the Lawrence Township committee is up for election this year, with incumbent John Tisa having the endorsement from the Cumberland County Regular 
+            Republican Organization. However, Charlie Woody is a strong challenger who has been running in Lawrence Township elections for several years.
+            While we have been able to meet Tisa a few times over the past several months at township meetings and republican breakfasts, it remains unclear what his 
+            overall campaign messaging is. Conversely, Charlie Woody has an in-depth campaign website where you can get a good idea of his views on what he would like to 
+            do in the township. Several issues surrounding Lawrence Township government and elections remain afloat in the public's mind, from inappropriate decorum during
+            township meetings, unclear accounting of who actually won last year's township race, to the significantly increasing health concerns of currently elected 
+            representatives. We are trying to set up a candidate's forum between Tisa and Woody, though only Woody has committed to participate.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
