brought back video links on home page banner

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                  Here is an interview with Democratic Primary candidates for General Assembly, Brandon Saffold and Carolyn Rush.
             </div>
             <div class="cta-link-box">
-                 <!-- <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
-                 <button id='actualVideo' class="hp-banner-button">Video</button> -->
+                 <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
+                 <button id='actualVideo' class="hp-banner-button">Video</button>
             </div>
         </div>
     </div>
