assembly responsibilities added

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -131,31 +131,46 @@
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
-            Description:
+            Description: A member of the New Jersey General Assembly serves in the lower house of the New Jersey State Legislature. Together with the State Senate 
+            (the upper house), Assembly members are responsible for shaping state laws and overseeing matters that affect residents across all municipalities, not just one 
+            town or city. Here are the key responsibilities of an Assembly member:
             <br>
             <br>
 
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-                Point 1
+                Statewide Legislative Responsibilities:
+                Assembly members draft, propose, and vote on state laws that apply to all of New Jersey. These may include bills on education, healthcare, public safety, 
+                infrastructure, civil rights, and economic development. Unlike a township committee member, who deals with local ordinances, Assembly members help shape laws 
+                that set statewide policy.
                 <br>
                 <br>
-                Point 2
+                Budget Review and State Funding Decisions:
+                Members of the General Assembly help review and approve the state budget proposed by the Governor. This includes decisions on how much funding is allocated 
+                to education, transportation, law enforcement, environmental programs, and aid to municipalities. They play a key role in determining where taxpayer money 
+                goes at the state level.
                 <br>
                 <br>
-                Point 3
+                Constituent Advocacy:
+                Assembly members represent the people of their legislative district—which includes multiple municipalities—and act as a bridge between local concerns and 
+                state-level solutions. They help constituents navigate state programs, respond to policy concerns, and advocate for legislation that addresses 
+                district-specific needs.
                 <br>
                 <br>
-                Point 4
+                Checks and Balances:
+                While the Governor has executive power to enforce laws and manage state agencies, Assembly members serve as a legislative check on the Governor’s authority. 
+                They can override a Governor’s veto (with enough support), conduct hearings, and introduce new legislation that counters or refines executive actions.
                 <br>
                 <br>
-                Point 5
+                Oversight and Accountability:
+                Assembly members may serve on committees that investigate government agencies, hold hearings on state policies, and evaluate how effectively programs are 
+                implemented. This role helps ensure transparency and accountability throughout the state government.
                 <br>
                 <br>
-                Point 6
-                <br>
-                <br>
-                Point 7
+                Collaborative Lawmaking:
+                Assembly members work with fellow legislators—including State Senators—to pass laws. Most legislation must pass both houses (Assembly and Senate) before 
+                reaching the Governor’s desk for final approval or veto. Assembly members often sponsor or co-sponsor bills, building coalitions across party lines or interest groups.
+                
             </details>
         </div>
 
