fixed typo in main nav on homepage

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a>
 
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a>
-                        <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a>
+                        <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - Legislative District 3 Issues</a>
                         <a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a>
                         <!-- <a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a> -->
                         <!-- <a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a>
