ld1 election summary

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -118,6 +118,23 @@
           <h6 class="page-title">State Assembly - Legislative District 1</h6>
           <p>
             
+            This year 2 seats are up for election in the General Assembly for Legislative District 1, which covers all of Cape May County, and parts of Cumberland and 
+            Atlantic counties. The two republican incumbents, Antwan McClellan and Erik Simonsen, are running unopposed in the primary. The democrats are running 3 
+            candidates. Brandon Saffold and Carolyn Rush are running together as part of Team Fulop, where Steven Fulop is running for governor. Another candidate, 
+            Carol Sabo, is a 3rd democrat candidate and she is currently the mayor of West Cape May.
+            <br>
+            <br>
+            While the republican incumbents have some info on the Cumberland County Regular Republican Organization's website, and they do regularly make appearances at the 
+            bi-weekly republican breakfasts with brief campaign messages, there is a whole layer of depth they could go into to really lay out what's been going on during 
+            their tenure, how they plan to proceed should they get re-elected, and how they might compare to the democrats in the general election. Hopefully we can 
+            get in touch with them and gain that insight.
+            <br>
+            <br>
+            Meanwhile, we were able to meet up with Carolyn Rush and Brandon Saffold at a local meet n greet with Steven Fulop. They agreed to do a podcast style interview,
+            which we have posted on their pages. We touched on many issues and you can get a good impression of their overall vision and personalities. We plan to do more 
+            correspondence with them as both the primary and general elections progress, as at least one of them will get through to the generals. However, after reaching 
+            out to Carol Sabo several different ways, we have yet to hear back from her.
+            <br> 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
