--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -118,10 +118,16 @@
           <h6 class="page-title">State Assembly - Legislative District 3</h6>
           <p>
             
-            As of right now, there seems to be a discrepancy between the candidates I received from the Cumberland County Clerk's office and the names seen in a few 
-            New Jersey Globe articles covering South Jersey politics. Specifically, Chris Konawell was on the excel spreadsheet I received from the clerk, while 
-            the NJ Globe article implies it would be Ed Ramsay instead. Are all 3 running and only a few got endorsements? If so, why aren't all 3 named on the excel 
-            sheet? I will be checking with the Salem County Clerk.
+            The General Assembly race for Legislative District 3 has two open seats this year. The democrats are running their 2 incumbents, Heather Simmons and Dave 
+            Bailey, unopposed. We have reached out to them via the information provided to us by the County Clerk (email and snail mail), though we have not received a 
+            response yet.
+            <br>
+            <br>
+            Similarly, the republicans are running two unopposed candidates in their primary, Lawrence Moore and Chris Konawell. Lawrence Moore did make an appearance at 
+            one of the recent republican breakfasts, but his campaign messaging was a bit brief without many specifics about his vision. We did get a friend request 
+            accepted from Chris Konawell, but we were left 'on read' (no response) when we asked for campaign information.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
